# high-order-networks-torch

./: .gitignore  Pipfile  README.md  cifar100.py  pyproject.toml  pytorch_transformer_example.py  requirements.txt  transformer_example.py  wikitext_predict.py  wikitext_transformer.py
config/: cifar100_config.yaml  transformer_config.yaml  wikitext_predict_config.yaml
examples/: cifar100.py
high_order_networks_torch/: activation.py  high_order_layers.py  resnet.py  simple_conv.py
