[tool.poetry]
name = "high-order-networks-torch"
version = "0.1.0"
description = "Standard networks using high order layers"
authors = ["jloveric <john.loverich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
omegaconf = "^2.3.0"
torchvision = "^0.18.0"
lightning = "^2.2.5"
torcheval = "^0.0.7"
high-order-layers-torch = "^2.5.1"

[tool.poetry.dev-dependencies]
hydra-core = "^1.3.1"
black = "^22.12.0"


[tool.poetry.group.dev.dependencies]
tensorboard = "^2.16.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
